# CloudPop

./: .gitignore  AGENTS.md  README.md  debug_scan.py  design.md  project.md  pyproject.toml  tasks.md  test_115.py
cloudpop/: __init__.py  config.py  main.py
cloudpop/api/: __init__.py  auth.py  cache.py  dashboard.py  folders.py  generate.py  health.py  scan.py
cloudpop/auth/: __init__.py  qr_login.py
cloudpop/cache/: __init__.py  manager.py
cloudpop/cli/: __init__.py  commands.py
cloudpop/dlna/: __init__.py  content_directory.py  router.py  service.py
cloudpop/models/: __init__.py  schemas.py
cloudpop/providers/: __init__.py  base.py  provider_115.py
cloudpop/proxy/: __init__.py  stream.py
cloudpop/strm/: __init__.py  generator.py  state.py
cloudpop/web/: __init__.py  router.py
cloudpop/web/static/: index.html  login.html
config/: config.yaml.example
tests/: __init__.py  test_dashboard_api.py  test_dlna.py  test_provider_115.py  test_stream_proxy.py  test_strm_generator.py
